--- a/src/components/PublicWork/PublicWork.css
+++ b/src/components/PublicWork/PublicWork.css
@@ -9,7 +9,7 @@
     mix-blend-mode: multiply;
 }
 .circle-1 {
-    background: #f66;
+    background: rgb(255, 102, 102);
     border-radius: 50% 50% 50% 70%/50% 50% 70% 60%;
 }
 .circle-2 {
@@ -44,4 +44,9 @@
     border-left: 30px solid #ffc600;
     border-bottom: 30px solid #ffc600;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4), -1px 1px 4px rgba(0, 0, 0, 0.4);
+}
+
+.smartphone {
+    background-repeat: no-repeat;
+    background-image: url("../../assets/img/smartphone.png");
 }
